[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Menu/uiTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/musiqueMenu.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/rollover.tres" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/click1.tres" type="AudioStream" id=5]
[ext_resource path="res://assets/logo_reverse.png" type="Texture" id=6]
[ext_resource path="res://src/Menu/Credits.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.760784 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="ColorRect"]
margin_left = 192.0
margin_top = 342.0
margin_right = 285.0
margin_bottom = 385.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "PLAY"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="ColorRect"]
margin_left = 191.0
margin_top = 393.0
margin_right = 322.0
margin_bottom = 436.0
rect_scale = Vector2( 1, 0.989928 )
theme = ExtResource( 1 )
text = "CREDITS"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="ColorRect"]
margin_left = 192.0
margin_top = 446.0
margin_right = 323.0
margin_bottom = 489.0
rect_scale = Vector2( 1, 0.989928 )
theme = ExtResource( 1 )
text = "EXIT"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoReverse" type="Sprite" parent="ColorRect"]
position = Vector2( 320.561, 212.875 )
scale = Vector2( 0.443889, 0.443889 )
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="MusicMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0
autoplay = true

[node name="Hoversound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Clicksound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Credits" parent="." instance=ExtResource( 7 )]

[connection signal="pressed" from="ColorRect/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ColorRect/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ColorRect/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
